[gd_scene load_steps=5 format=3 uid="uid://bgxkxbpkkbafl"]

[ext_resource type="Script" path="res://Scenes/GameElements/factory.gd" id="1_bm7k3"]
[ext_resource type="Texture2D" uid="uid://r7vmm2skdp8s" path="res://Sprites/fabrica.png" id="1_i2jaq"]
[ext_resource type="FontFile" uid="uid://cy04exvuwceek" path="res://Fonts/ArsenalSC-Regular.ttf" id="1_ktvle"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nneu5"]
size = Vector2(148.537, 115.904)

[node name="Factory" type="Node2D"]
script = ExtResource("1_bm7k3")

[node name="Area2D_1A" type="Area2D" parent="." groups=["shelves_1A"]]
position = Vector2(1.52588e-05, 0)
scale = Vector2(0.177734, 0.177734)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_1A"]
position = Vector2(-0.000183105, -0.000244141)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_nneu5")
one_way_collision_margin = 0.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_i2jaq")

[node name="label_factory_name" type="Label" parent="."]
offset_left = -232.0
offset_top = -493.0
offset_right = 231.0
offset_bottom = -342.0
theme_override_colors/font_color = Color(0.92549, 0.223529, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("1_ktvle")
theme_override_font_sizes/font_size = 120
text = "FÃ¡brica A
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="label_production" type="Label" parent="."]
offset_left = -226.0
offset_top = -368.0
offset_right = 234.0
offset_bottom = -217.0
theme_override_colors/font_color = Color(0.92549, 0.223529, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("1_ktvle")
theme_override_font_sizes/font_size = 120
text = "(130/130)
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect_route" type="ColorRect" parent="."]
offset_left = 376.0
offset_top = 353.0
offset_right = 2189.0
offset_bottom = 467.0
color = Color(0.92549, 0.223529, 0.4, 1)

[node name="Line2D" type="Line2D" parent="ColorRect_route"]
position = Vector2(13.1848, 72)
scale = Vector2(4.52312, 6.8)
points = PackedVector2Array(-2.99997, -2, 398, -2)
width = 5.0
